--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <!-- Navbar -->
   <nav>
-    <div class="nav-left">
-      <span><img src="./Assets/Logo.svg" alt="logo"></span>
+    <div class="logo">
+      <span><img src="/Assets/Logo.svg" alt="logo"></span>
     </div>
     <div class="nav-right">
-      <span><img src="./Assets/Search Icon.svg" alt="search-icon"></span>
+      <span><img src="/Assets/Search Icon.svg" alt="search-icon"></span>
       <p>Sign in</p>
       <button class="btn">
         Get started-<span class="free-text">it's free</span>
@@ -31,6 +31,38 @@
       Get started-<span class="free-text">it's free</span>
     </button>
     <p>No credit card required.</p>
+    <img src="/Assets/Snippet Image.png" alt="snippet-image">
   </main>
+
+  <!-- Customizable section -->
+  <section>
+    <div class="customizable-text">
+      <h2>A fully customizable code snippet editor</h2>
+      <p>
+        Fully customize the color scheme of your code snippet, or use our own premade color schemes. Export your code snippets in JPG, PDF, PNG, or any of the other 10+ common extensions.
+      </p>
+      <button class="btn">
+        Get started-<span class="free-text">it's free</span>
+      </button>
+    </div>
+    <div class="customizable-img">
+      <img src="/Assets/Customizable Image.png" alt="">
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="logo">
+      <span><img src="/Assets/Logo.svg" alt="logo"></span>
+    </div>
+    <div class="footer-text">
+      <p>
+        Terms and Conditions
+      </p>
+      <p>
+        Privacy Policy
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
