--- a/index.html
+++ b/index.html
@@ -5,64 +5,72 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
   <title>Snippet Template Project</title>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav>
-    <div class="logo">
-      <span><img src="/Assets/Logo.svg" alt="logo"></span>
-    </div>
-    <div class="nav-right">
-      <span><img src="/Assets/Search Icon.svg" alt="search-icon"></span>
-      <p>Sign in</p>
-      <button class="btn">
-        Get started-<span class="free-text">it's free</span>
-      </button>
-    </div>
-  </nav>
-
-  <!-- Main section -->
-  <main>
-    <h1>Gorgeous Code Snippets</h1>
-    <p>With Snipper, create fully customizable code snippets in a matter of seconds right from your browser.</p>
-    <button class="btn">
-      Get started-<span class="free-text">it's free</span>
-    </button>
-    <p>No credit card required.</p>
-    <img src="/Assets/Snippet Image.png" alt="snippet-image">
-  </main>
-
-  <!-- Customizable section -->
-  <section>
-    <div class="customizable-text">
-      <h2>A fully customizable code snippet editor</h2>
-      <p>
-        Fully customize the color scheme of your code snippet, or use our own premade color schemes. Export your code snippets in JPG, PDF, PNG, or any of the other 10+ common extensions.
-      </p>
-      <button class="btn">
-        Get started-<span class="free-text">it's free</span>
-      </button>
-    </div>
-    <div class="customizable-img">
-      <img src="/Assets/Customizable Image.png" alt="">
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <div class="logo">
-      <span><img src="/Assets/Logo.svg" alt="logo"></span>
-    </div>
-    <div class="footer-text">
-      <p>
-        Terms and Conditions
-      </p>
-      <p>
-        Privacy Policy
-      </p>
-    </div>
-  </footer>
+  <div class="container">
+    <section class="header">
+      <!-- Navbar -->
+      <nav class="navbar">
+        <div class="logo">
+          <span><img src="/Assets/Logo.svg" alt="logo"></span>
+        </div>
+        <div class="nav-right">
+          <span class="nav-item"><img src="/Assets/Search Icon.svg" alt="search-icon"></span>
+          <p class="nav-item">Sign in</p>
+          <button class="btn nav-item">
+            Get started<span class="free-text"> - it's free</span>
+          </button>
+        </div>
+      </nav>
+  
+      <!-- Header content -->
+      <div class="header-content">
+        <div class="header-text">
+          <h1>Gorgeous Code Snippets</h1>
+          <p class="main-text">With Snipper, create fully customizable code snippets in a matter of seconds right from your browser.</p>
+          <button class="btn">
+            Get started<span class="free-text"> - it's free</span>
+          </button>
+          <p>No credit card required.</p>
+        </div>
+        <div class="header-img">
+          <img src="/Assets/Snippet Image.png" alt="snippet-image">
+        </div>
+      </div>
+    </section>
+  
+    <!-- Customizable section -->
+    <section class="customizable">
+      <div class="customizable-text">
+        <h2>A fully customizable code snippet editor</h2>
+        <p>
+          Fully customize the color scheme of your code snippet, or use our own premade color schemes. Export your code snippets in JPG, PDF, PNG, or any of the other 10+ common extensions.
+        </p>
+        <button class="btn">
+          Get started<span class="free-text"> - it's free</span>
+        </button>
+      </div>
+      <div class="customizable-img">
+        <img src="/Assets/Customizable Image.png" alt="customizable-image">
+      </div>
+    </section>
+  
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="logo">
+        <span><img src="/Assets/Logo.svg" alt="logo"></span>
+      </div>
+      <div class="footer-text">
+        <p>
+          Terms and Conditions
+        </p>
+        <p>
+          Privacy Policy
+        </p>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
