make website responsive and finish project

--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
           <span><img src="/Assets/Logo.svg" alt="logo"></span>
         </div>
         <div class="nav-right">
-          <span class="nav-item"><img src="/Assets/Search Icon.svg" alt="search-icon"></span>
-          <p class="nav-item">Sign in</p>
-          <button class="btn nav-item">
+          <!-- <span class="nav-item"></span>--> <a class="nav-item" href="#"><img src="/Assets/Search Icon.svg" alt="search-icon"></a>
+          <!-- <span><p class="nav-item">Sign in</p></span>--> <a class="nav-item" href="#">Sign in</a>
+          <span><button class="btn nav-item">
             Get started<span class="free-text"> - it's free</span>
-          </button>
+          </button></span>
+        </div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </div>
       </nav>
   
@@ -72,5 +77,7 @@
       </div>
     </footer>
   </div>
+
+  <script src="/app.js"></script>
 </body>
 </html>
